--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="brand-heading">Mosaic<span class="color">IM</span> <i class="fa fa-star-o"></i></h1>
+                    <h1 class="brand-heading">Mosaic <i class="fa fa-star-o"></i> <span class="color">IM</span></h1>
                     <h2>Discovering Value under your data</h2>
                     <p class="intro-text">We are Coming. Stay tuned!</p>
                     <!-- countdown -->
@@ -47,15 +47,15 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <h3><i class="fa fa-phone"></i> (123) 456-7890</h3>
+                    <!-- <h3><i class="fa fa-phone"></i> (123) 456-7890</h3> -->
                     <p>
                         <a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a>
                         <a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a>
                         <a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-google-plus fa-stack-1x fa-inverse"></i></span></a>
                         <a href=""><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-envelope fa-stack-1x fa-inverse"></i></span></a>
                     </p>
-                    <p><i class="fa fa-map-marker"></i> 2345 Some Ave, New York, NY 23458<br>
-                        Copyright &copy; Your Website 2015</p>
+                    <!-- <p><i class="fa fa-map-marker"></i> 2345 Some Ave, New York, NY 23458<br>
+                        Copyright &copy; Your Website 2015</p> -->
                 </div>
             </div>
         </div>
