--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 
     <!-- metas -->
     <meta charset="utf-8">
-    <meta name="author" content="Chitrakoot Web" />
+    <meta name="author" content="Mosaic" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="keywords" content="HTML5 Template Amava" />
-    <meta name="description" content="Amava - Startup Agency and SasS Business Template" />
+    <meta name="keywords" content="AI data value" />
+    <meta name="description" content="MOSAIC - Discovering Value under your data" />
 
     <!-- title  -->
-    <title>Amava - Startup Agency and SasS Business Template</title>
+    <title>MOSAIC - Discovering Value under your data</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="img/logos/favicon.png" />
