--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
     <title>MOSAIC - Discovering Value under your data</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="img/logos/favicon.png" />
+    <link rel="shortcut icon" href="img/logos/logo.svg" />
+    <link rel="apple-touch-icon" href="img/logos/logo.svg" />
+    <link rel="apple-touch-icon" sizes="72x72" href="img/logos/logo.svg" />
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/logo.svg" />
+    <!-- <link rel="shortcut icon" href="img/logos/favicon.png" />
     <link rel="apple-touch-icon" href="img/logos/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="img/logos/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/apple-touch-icon-114x114.png" /> -->
 
     <!-- plugins -->
     <link rel="stylesheet" href="css/plugins.css" />
@@ -71,7 +75,7 @@
 
                                     <div class="navbar-header navbar-header-custom">
                                         <!-- start logo -->
-                                        <a href="javascript:void(0)" class="navbar-brand"><img id="logo" src="img/logos/logo-02.png" alt="logo"></a>
+                                        <a href="javascript:void(0)" class="navbar-brand"><img id="logo" style="height: 100px; max-height: 100px;" src="img/logos/logo.svg" alt="logo"></a>
                                         <!-- end logo -->
                                     </div>
 
@@ -143,7 +147,7 @@
                     <!-- start right image banner -->
                     <div class="col-lg-6 col-md-12 sm-text-center">
                         <div class="banner-img">
-                            <img src="img/content/content-04.png" class="img-fluid float-right width-100" alt="">
+                            <img src="img/home/home-4-b1.svg" class="img-fluid float-right width-100" alt="">
                         </div>
                     </div>
                     <!-- end right image banner -->
@@ -170,20 +174,20 @@
                 <div class="row">
                     <div class="col-lg-7 col-md-12 order-2 order-lg-1">
                         <div class="padding-30px-right sm-no-padding">
-                            <h4 class="sm-margin-lr-auto sm-text-center xs-width-100">It’s all about innovate your business</h4>
+                            <h4 class="sm-margin-lr-auto sm-text-center xs-width-100">Make data science your competitive advantage using our services</h4>
                             <div id="accordion" class="accordion-style">
                                 <div class="card">
                                     <div class="card-header" id="headingOne">
                                         <div class="mb-0">
                                             <h5 class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                         <span class="counts">1</span>
-                                            <span class="item-title">Our Services</span>
+                                            <span class="item-title">Data Strategy</span>
                                     </h5>
                                         </div>
                                     </div>
                                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                                         <div class="card-body">
-                                            Make data science your competitive advantage
+                                            Start your AI journey with an elaborate data strategy tailored to your unique business goals
                                         </div>
                                     </div>
                                 </div>
@@ -192,26 +196,11 @@
                                         <div class="mb-0">
                                             <h5 class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                    <span class="counts">2</span>
-                                      <span class="item-title">Data Strategy</span>
+                                      <span class="item-title">Data Science & AI Consulting</span>
                                 </h5>
                                         </div>
                                     </div>
                                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                                        <div class="card-body">
-                                            Start your AI journey with an elaborate data strategy tailored to your unique business goals
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="card-header" id="headingThree">
-                                        <div class="mb-0">
-                                            <h5 class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    <span class="counts">3</span>
-                                            <span class="item-title">Data Science & AI Consulting</span>
-                                   </h5>
-                                        </div>
-                                    </div>
-                                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                                         <div class="card-body">
                                             Discover the true potential of your data with our data science experts and machine learning engineers
                                         </div>
@@ -221,7 +210,7 @@
                                     <div class="card-header" id="headingThree">
                                         <div class="mb-0">
                                             <h5 class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    <span class="counts">4</span>
+                                    <span class="counts">3</span>
                                             <span class="item-title">AI Software Development</span>
                                    </h5>
                                         </div>
@@ -288,7 +277,7 @@
 
                                     </div>
                                     <div class="col-lg-5 offset-lg-1 order-lg-2 order-1 sm-text-center sm-margin-20px-bottom">
-                                        <img src="img/content/tab-content-05.png" alt="" class="img-effect" />
+                                        <img src="img/content/content-06.png" alt="" class="img-effect" />
                                     </div>
                                 </div>
                             </div>
@@ -297,7 +286,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-5 sm-margin-20px-bottom sm-text-center">
-                                        <img src="img/content/tab-content-04.png" alt="" class="img-effect" />
+                                        <img src="img/content/feature-01.png" alt="" class="img-effect" />
                                     </div>
                                     <div class="col-lg-5 offset-lg-1">
                                         <h5>Financial Services</h5>
@@ -318,7 +307,7 @@
 
                                     </div>
                                     <div class="col-lg-5 offset-lg-1 order-lg-2 order-1 sm-text-center sm-margin-20px-bottom">
-                                        <img src="img/content/tab-content-02.png" alt="" class="img-effect" />
+                                        <img src="img/home/home-4-f1.svg" alt="" class="img-effect" />
                                     </div>
                                 </div>
                             </div>
@@ -327,7 +316,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-5 sm-margin-20px-bottom sm-text-center">
-                                        <img src="img/content/tab-content-03.png" alt="" class="img-effect" />
+                                        <img src="img/home/home-2-b1.svg" alt="" class="img-effect" />
                                     </div>
                                     <div class="col-lg-5 offset-lg-1">
                                         <h5>IoT</h5>
@@ -365,22 +354,6 @@
         <!-- start footer section -->
         <footer>
             <div class="container">
-                <div class="row margin-30px-bottom padding-30px-bottom border-bottom border-color-light-white">
-                    <div class="col-lg-4 col-md-12 sm-margin-30px-bottom text-center">
-                        <h3 class="footer-title-style text-white">Phone</h3>
-                        <p class="font-size16 sm-font-size14">(+44) 123 456 789</p>
-                    </div>
-
-                    <div class="col-lg-4 col-md-12 sm-margin-30px-bottom text-center">
-                        <h3 class="footer-title-style text-white">Email</h3>
-                        <p class="font-size16 sm-font-size14">addyour@emailhere</p>
-                    </div>
-
-                    <div class="col-lg-4 col-md-12 text-center">
-                        <h3 class="footer-title-style text-white">Location</h3>
-                        <p class="font-size16 sm-font-size14">74 Guild Street 542B, Town MT.</p>
-                    </div>
-                </div>
 
                 <div class="row">
                     <div class="col-12 text-center">
@@ -404,7 +377,7 @@
             </div>
             <div class="footer-bar">
                 <div class="container">
-                    <p class="xs-font-size13">&copy; 2019 Amava is Powered by Chitrakoot Web</p>
+                    <p class="xs-font-size13">&copy; 2020 MOS[AI]C</p>
                 </div>
             </div>
         </footer>
