--- a/coming-soon.html
+++ b/coming-soon.html
@@ -5,20 +5,25 @@
 
     <!-- metas -->
     <meta charset="utf-8">
-    <meta name="author" content="Chitrakoot Web" />
+    <meta name="author" content="Mosaic" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="keywords" content="HTML5 Template Amava" />
-    <meta name="description" content="Amava - Startup Agency and SasS Business Template" />
+    <meta name="keywords" content="AI data value" />
+    <meta name="description" content="MOSAIC - Discovering Value under your data" />
 
     <!-- title  -->
-    <title>Amava - Startup Agency and SasS Business Template</title>
+    <title>MOSAIC - Discovering Value under your data</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="img/logos/favicon.png" />
+    <link rel="shortcut icon" href="img/logos/logo.svg" />
+    <link rel="apple-touch-icon" href="img/logos/logo.svg" />
+    <link rel="apple-touch-icon" sizes="72x72" href="img/logos/logo.svg" />
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/logo.svg" />
+
+    <!-- <link rel="shortcut icon" href="img/logos/favicon.png" />
     <link rel="apple-touch-icon" href="img/logos/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="img/logos/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/apple-touch-icon-114x114.png" /> -->
 
     <!-- plugins -->
     <link rel="stylesheet" href="css/plugins.css" />
@@ -81,12 +86,11 @@
                             </ul>
                             <div class="padding-four-all xs-padding-20px-all text-center margin-30px-bottom xs-margin-20px-bottom center-col width-70 xs-width-90">
                                 <p class="font-size16 xs-font-size14 text-white width-95 center-col xs-width-100 xs-margin-15px-bottom">We'll be here soon with our new awesome site.</p>
-                                <a href="contact.html" class="butn">Send a Query</a>
+                                <a href="index.html#contact" class="butn">Send a Query</a>
                             </div>
                             <ul class="social-links text-center no-margin no-padding list-style-none">
                                 <li><a href="javascript:void(0);"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="javascript:void(0);"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="javascript:void(0);"><i class="fab fa-google-plus-g"></i></a></li>
                                 <li><a href="javascript:void(0);"><i class="fab fa-dribbble"></i></a></li>
                                 <li><a href="javascript:void(0);"><i class="fab fa-youtube"></i></a></li>
                                 <li><a href="javascript:void(0);"><i class="fab fa-linkedin-in"></i></a></li>
