--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- end page loading -->
 
     <!-- start main-wrapper section -->
-    <div class="main-wrapper">
+    <div id="home" class="main-wrapper">
 
         <!-- start header section -->
         <header class="position-absolute width-100 light-header-mobile sm-position-relative">
@@ -83,36 +83,19 @@
 
                                     <!-- start menu area -->
                                     <ul class="navbar-nav ml-auto" id="nav">
-                                        <li><a href="javascript:void(0)">Home</a>
-                                            <ul>
-                                                <li><a href="demo-1.html">Demo 01</a></li>
-                                                <li><a href="demo-2.html">Demo 02</a></li>
-                                                <li><a href="demo-3.html">Demo 03 </a></li>
-                                                <li><a href="demo-4.html">Demo 04</a></li>
-                                                <li><a href="demo-5.html" target="_blank">Demo 05 - One Page</a></li>
-                                                <li><a href="demo-6.html" target="_blank">Demo 06 - One Page</a></li>
-                                                <li><a href="demo-7.html" target="_blank">Demo 07 - One Page</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="about.html">Solutions</a></li>
-                                        <li><a href="javascript:void(0)">Sectors</a>
-                                            <ul>
-                                                <li><a href="services.html">Service 01</a></li>
-                                                <li><a href="service-2.html">Service 02</a></li>
-                                                <li><a href="service-3.html">Service 03</a></li>
-                                                <li><a href="service-detail.html">Service Detail</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="#home">Home</a></li>
+                                        <li><a href="#solutions">Solutions</a></li>
+                                        <li><a href="#industries">Sectors</a></li>
+                                        <li><a href="#contact">Contact Us</a></li>
                                     </ul>
                                     <!-- end menu area -->
 
                                     <!-- start attribute navigation -->
-                                    <div class="attr-nav sm-no-margin sm-margin-65px-right">
+                                    <!-- <div class="attr-nav sm-no-margin sm-margin-65px-right">
                                         <ul>
                                             <li class="search"><a href="javascript:void(0)"><i class="fas fa-search"></i></a></li>
                                         </ul>
-                                    </div>
+                                    </div> -->
                                     <!-- end attribute navigation -->
 
                                 </nav>
@@ -137,7 +120,7 @@
 
                             <h1 class="line-height-55 md-line-height-50 xs-line-height-40 wow fadeInUp text-theme-color xs-font-size30" data-wow-delay=".1s">Discovering value under your data</h1>
                             <p class="font-size16 line-height-28 xs-font-size14 xs-line-height-26 margin-30px-bottom sm-margin-20px-bottom width-80 xs-width-90 wow fadeInUp" data-wow-delay=".2s">We use  the power of data science and artificial intelligence to turn your data into profit.</p>
-                            <div class="wow fadeInUp story-video" data-wow-delay=".4s"><a href="javascript:void(0)" class="butn margin-10px-right vertical-align-middle">Get Started</a>
+                            <div class="wow fadeInUp story-video" data-wow-delay=".4s"><a href="#contact" class="butn margin-10px-right vertical-align-middle">Get in Touch</a>
                                 <a href="video/down-time.mp4" class="btn-play-theme video vertical-align-middle"><i class="fa fa-play"></i></a>
                             </div>
                         </div>
@@ -169,7 +152,7 @@
 
 
         <!-- start innovate business section -->
-        <section class="service-section">
+        <section id="solutions" class="service-section">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 col-md-12 order-2 order-lg-1">
@@ -234,7 +217,7 @@
 
 
         <!-- start how it work section -->
-        <section class="bg-theme-light">
+        <section id="industries" class="bg-theme-light">
             <div class="container">
                 <div class="section-heading2">
                     <span class="alt-font">How we work</span>
@@ -261,7 +244,7 @@
 
                                         <h5>Digital Health</h5>
                                         <p>Introduce neural networks into your mobile app to analyze user data</p>
-                                        <p>Learn More</p>
+                                        <a href="#contact" class="butn margin-10px-right vertical-align-middle">Learn More</a>
 
                                     </div>
                                 </div>
@@ -273,7 +256,7 @@
                                     <div class="col-lg-5 order-lg-1 order-2">
                                         <h5>Entertainment</h5>
                                         <p>Automate customer feedback analysis to become more productive</p>
-                                        <p>Learn More</p>
+                                        <a href="#contact" class="butn margin-10px-right vertical-align-middle">Learn More</a>
 
                                     </div>
                                     <div class="col-lg-5 offset-lg-1 order-lg-2 order-1 sm-text-center sm-margin-20px-bottom">
@@ -291,7 +274,7 @@
                                     <div class="col-lg-5 offset-lg-1">
                                         <h5>Financial Services</h5>
                                         <p>Utilize predictive analytics to improve debt collection effectiveness</p>
-                                        <p>Learn More</p>
+                                        <a href="#contact" class="butn margin-10px-right vertical-align-middle">Learn More</a>
 
                                     </div>
                                 </div>
@@ -303,7 +286,7 @@
                                     <div class="col-lg-5 order-lg-1 order-2">
                                         <h5>Advertising</h5>
                                         <p>Improve your advertising capabilities through advanced social media analytics</p>
-                                        <p>Learn More</p>
+                                        <a href="#contact" class="butn margin-10px-right vertical-align-middle">Learn More</a>
 
                                     </div>
                                     <div class="col-lg-5 offset-lg-1 order-lg-2 order-1 sm-text-center sm-margin-20px-bottom">
@@ -321,7 +304,7 @@
                                     <div class="col-lg-5 offset-lg-1">
                                         <h5>IoT</h5>
                                         <p>Get valuable insights from user interaction data from sensors, cameras, etc.</p>
-                                        <p>Learn More</p>
+                                        <a href="#contact" class="butn margin-10px-right vertical-align-middle">Learn More</a>
 
                                     </div>
                                 </div>
@@ -340,7 +323,7 @@
                     <div class="col-md-9 text-center center-col">
                         <h4 class="text-white sm-margin-10px-bottom">From a different industry? Have your own Case? Feel free to contact us to learn how we can help.</h4>
                         <p class="text-white font-size16 xs-font-size14 margin-30px-bottom sm-margin-20px-bottom">We always try to provide you our best business consulting service.</p>
-                        <a href="javascript:void(0)" class="butn white"><span>Contact Us</span></a>
+                        <!-- <a href="javascript:void(0)" class="butn white"><span>Contact Us</span></a> -->
                     </div>
 
                 </div>
@@ -349,6 +332,53 @@
         </section>
         <!-- end contact section -->
 
+        <!-- start contact form -->
+        <section id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 wow fadeIn">
+
+                        <div class="section-heading">
+                            <h3>Get in Touch</h3>
+                            <p class="width-55 sm-width-75 xs-width-95">We are available 24/7 by e-mail and phone. You can also ask a question about our services through our contact form that we regularly provide.</p>
+                        </div>
+
+                        <form class="rd-mailform" enctype="multipart/form-data" data-form-output="form-output-global" data-form-type="contact" method="post" action="bat/rd-mailform.php">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="form-wrap">
+                                        <input class="form-input" type="text" name="first_name" placeholder="Your Full Name:" data-constraints="@Required">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-wrap">
+                                        <input class="form-input" type="text" name="phone" placeholder="Phone Number:">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-wrap">
+                                        <input class="form-input" type="text" name="email" placeholder="Email:" data-constraints="@Required @Email">
+
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-wrap">
+                                        <textarea class="form-input" name="message" rows="7" id="message" placeholder="Message:" data-constraints="@Required"></textarea>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-12 margin-15px-top text-center">
+                                    <button type="submit" class="butn style-one fill">Submit Comment</button>
+                                    <div class="snackbars" id="form-output-global"></div>
+                                </div>
+                            </div>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end contact form -->
 
 
         <!-- start footer section -->
@@ -365,9 +395,6 @@
                                 <a href="javascript:void(0)"><i class="fab fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="javascript:void(0)"><i class="fab fa-google-plus-g"></i></a>
-                            </li>
-                            <li>
                                 <a href="javascript:void(0)"><i class="fab fa-linkedin-in"></i></a>
                             </li>
                         </ul>
@@ -377,7 +404,7 @@
             </div>
             <div class="footer-bar">
                 <div class="container">
-                    <p class="xs-font-size13">&copy; 2020 MOS[AI]C</p>
+                    <p class="xs-font-size13">&copy; 2018-2020 MOS[AI]C</p>
                 </div>
             </div>
         </footer>
