--- a/404-page.html
+++ b/404-page.html
@@ -5,20 +5,25 @@
 
     <!-- metas -->
     <meta charset="utf-8">
-    <meta name="author" content="Chitrakoot Web" />
+    <meta name="author" content="Mosaic" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="keywords" content="HTML5 Template Amava" />
-    <meta name="description" content="Amava - Startup Agency and SasS Business Template" />
+    <meta name="keywords" content="AI data value" />
+    <meta name="description" content="MOSAIC - Discovering Value under your data" />
 
     <!-- title  -->
-    <title>Amava - Startup Agency and SasS Business Template</title>
+    <title>MOSAIC - Discovering Value under your data</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="img/logos/favicon.png" />
+    <link rel="shortcut icon" href="img/logos/logo.svg" />
+    <link rel="apple-touch-icon" href="img/logos/logo.svg" />
+    <link rel="apple-touch-icon" sizes="72x72" href="img/logos/logo.svg" />
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/logo.svg" />
+
+    <!-- <link rel="shortcut icon" href="img/logos/favicon.png" />
     <link rel="apple-touch-icon" href="img/logos/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="img/logos/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/apple-touch-icon-114x114.png" /> -->
 
     <!-- plugins -->
     <link rel="stylesheet" href="css/plugins.css" />
@@ -52,7 +57,7 @@
 
                     <div class="row margin-eight-bottom">
                         <div class="col-12">
-                            <img src="img/logos/logo-white.png" alt="" class="sm-width-250px xs-width-150px" />
+                            <img src="img/logos/logo.svg" alt="" class="sm-width-250px xs-width-150px" />
                         </div>
                     </div>
 
@@ -60,14 +65,14 @@
                         <div class="col-12">
                             <p class="font-size130 alt-font font-weight-700 title">404</p>
                             <h2 class="text-white font-size40 xs-font-size22 margin-30px-bottom">Page not found</h2>
-                            <a href="demo-1.html" class="butn margin-10px-right margin-10px-bottom">Back to Home</a>
-                            <a href="contact.html" class="butn margin-10px-bottom">Contact Us</a>
+                            <a href="index.html" class="butn margin-10px-right margin-10px-bottom">Back to Home</a>
+                            <a href="index.html#contact" class="butn margin-10px-bottom">Contact Us</a>
                         </div>
                     </div>
 
                     <div class="row margin-50px-top sm-margin-25px-top">
                         <div class="col-12">
-                            &copy; 2019 Amava <a href="#" class="text-white">Privacy Policy</a>
+                            &copy; 2018-2020 MOS[AI]C
                         </div>
                     </div>
 
