--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                                     <div class="navbar-header navbar-header-custom">
                                         <!-- start logo -->
-                                        <a href="javascript:void(0)" class="navbar-brand"><img id="logo" style="height: 100px; max-height: 100px;" src="img/logos/logo.svg" alt="logo"></a>
+                                        <a href="javascript:void(0)" class="navbar-brand"><img id="logo" src="img/logos/logo.svg" alt="logo"></a>
                                         <!-- end logo -->
                                     </div>
 
