--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <title>MOSAIC - Discovering Value under your data</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="img/logos/logo.svg" />
-    <link rel="apple-touch-icon" href="img/logos/logo.svg" />
-    <link rel="apple-touch-icon" sizes="72x72" href="img/logos/logo.svg" />
-    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/logo.svg" />
+    <link rel="shortcut icon" href="img/logos/logo_sqr.svg" />
+    <link rel="apple-touch-icon" href="img/logos/logo_sqr.svg" />
+    <link rel="apple-touch-icon" sizes="72x72" href="img/logos/logo_sqr.svg" />
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logos/logo_sqr.svg" />
     <!-- <link rel="shortcut icon" href="img/logos/favicon.png" />
     <link rel="apple-touch-icon" href="img/logos/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="img/logos/apple-touch-icon-72x72.png" />
