--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                     <ul class="navbar-nav ml-auto" id="nav">
                                         <li><a href="#home">Home</a></li>
                                         <li><a href="#solutions">Solutions</a></li>
-                                        <li><a href="#industries">Sectors</a></li>
+                                        <li><a href="#industries">Industries</a></li>
                                         <li><a href="#contact">Contact Us</a></li>
                                     </ul>
                                     <!-- end menu area -->
@@ -340,7 +340,7 @@
 
                         <div class="section-heading">
                             <h3>Get in Touch</h3>
-                            <p class="width-55 sm-width-75 xs-width-95">We are available 24/7 by e-mail and phone. You can also ask a question about our services through our contact form that we regularly provide.</p>
+                            <p class="width-55 sm-width-75 xs-width-95">Just send us a brief description of your case. We will try to provide you with the best expertise and solutions.</p>
                         </div>
 
                         <form class="rd-mailform" enctype="multipart/form-data" data-form-output="form-output-global" data-form-type="contact" method="post" action="bat/rd-mailform.php">
@@ -368,7 +368,7 @@
                                 </div>
 
                                 <div class="col-md-12 margin-15px-top text-center">
-                                    <button type="submit" class="butn style-one fill">Submit Comment</button>
+                                    <button type="submit" class="butn style-one fill">Send</button>
                                     <div class="snackbars" id="form-output-global"></div>
                                 </div>
                             </div>
